[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/TIleSet_NewMapa.tres" type="TileSet" id=1]
[ext_resource path="res://Scripts/GameScene.gd" type="Script" id=2]
[ext_resource path="res://Fonts/DoubleHomicide.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/StringScript.gd" type="Script" id=4]
[ext_resource path="res://RawAssets/string.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=17]
size = 160
outline_size = 2
outline_color = Color( 1, 0.945098, 0.909804, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 32
outline_size = 1
outline_color = Color( 1, 0.945098, 0.909804, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=19]
size = 128
outline_size = 2
outline_color = Color( 1, 0.945098, 0.909804, 1 )
font_data = ExtResource( 3 )

[node name="MainNode" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 6
collision_mask = 6
format = 1
tile_data = PoolIntArray( -524303, 23, 0, -524302, 23, 0, -524301, 23, 0, -524300, 23, 0, -524299, 23, 0, -524298, 23, 0, -524297, 23, 0, -524296, 23, 0, -524295, 23, 0, -524294, 23, 0, -524293, 23, 0, -524292, 23, 0, -524291, 23, 0, -524290, 23, 0, -524289, 23, 0, -589824, 23, 0, -589823, 23, 0, -589822, 23, 0, -589821, 23, 0, -589820, 23, 0, -589819, 23, 0, -589818, 23, 0, -589817, 23, 0, -589816, 23, 0, -589815, 23, 0, -589814, 23, 0, -589813, 23, 0, -589812, 23, 0, -589811, 23, 0, -589810, 23, 0, -458767, 23, 0, -458766, 23, 0, -458765, 23, 0, -458764, 23, 0, -458763, 23, 0, -458762, 23, 0, -458761, 23, 0, -458760, 23, 0, -458759, 23, 0, -458758, 23, 0, -458757, 23, 0, -458756, 23, 0, -458755, 23, 0, -458754, 23, 0, -458753, 23, 0, -524288, 23, 0, -524287, 23, 0, -524286, 23, 0, -524285, 15, 0, -524284, 23, 0, -524283, 23, 0, -524282, 23, 0, -524281, 23, 0, -524280, 23, 0, -524279, 23, 0, -524278, 23, 0, -524277, 23, 0, -524276, 23, 0, -524275, 23, 0, -524274, 23, 0, -393231, 23, 0, -393230, 23, 0, -393229, 23, 0, -393228, 23, 0, -393227, 23, 0, -393226, 23, 0, -393225, 23, 0, -393224, 23, 0, -393223, 23, 0, -393222, 23, 0, -393221, 23, 0, -393220, 23, 0, -393219, 23, 0, -393218, 23, 0, -393217, 23, 0, -458752, 23, 0, -458751, 15, 0, -458750, 23, 0, -458749, 17, 0, -458748, 23, 0, -458747, 15, 0, -458746, 23, 0, -458745, 23, 0, -458744, 23, 0, -458743, 23, 0, -458742, 23, 0, -458741, 23, 0, -458740, 23, 0, -458739, 23, 0, -458738, 23, 0, -327695, 23, 0, -327694, 23, 0, -327693, 23, 0, -327692, 23, 0, -327691, 23, 0, -327690, 23, 0, -327689, 23, 0, -327688, 23, 0, -327687, 23, 0, -327686, 23, 0, -327685, 23, 0, -327684, 15, 0, -327683, 23, 0, -327682, 23, 0, -327681, 23, 0, -393216, 23, 0, -393215, 17, 0, -393214, 23, 0, -393213, 23, 0, -393212, 23, 0, -393211, 17, 0, -393210, 23, 0, -393209, 23, 0, -393208, 23, 0, -393207, 23, 0, -393206, 23, 0, -393205, 23, 0, -393204, 23, 0, -393203, 23, 0, -393202, 23, 0, -262159, 23, 0, -262158, 16, 0, -262157, 2, 0, -262156, 16, 0, -262155, 16, 0, -262154, 15, 0, -262153, 16, 0, -262152, 16, 0, -262151, 23, 0, -262150, 23, 0, -262149, 23, 0, -262148, 17, 0, -262147, 23, 0, -262146, 16, 0, -262145, 2, 0, -327680, 16, 0, -327679, 16, 0, -327678, 23, 0, -327677, 23, 0, -327676, 23, 0, -327675, 23, 0, -327674, 23, 0, -327673, 23, 0, -327672, 23, 0, -327671, 23, 0, -327670, 23, 0, -327669, 23, 0, -327668, 23, 0, -327667, 23, 0, -327666, 23, 0, -196623, 23, 0, -196622, 16, 0, -196621, 1, 0, -196620, 16, 0, -196619, 16, 0, -196618, 16, 0, -196617, 16, 0, -196616, 16, 0, -196615, 5, 0, -196614, 7, 0, -196613, 16, 0, -196612, 23, 0, -196611, 23, 0, -196610, 16, 0, -196609, 14, 0, -262144, 16, 0, -262143, 16, 0, -262142, 23, 0, -262141, 23, 0, -262140, 16, 0, -262139, 16, 0, -262138, 16, 0, -262137, 16, 0, -262136, 23, 0, -262135, 23, 0, -262134, 23, 0, -262133, 23, 0, -262132, 23, 0, -262131, 23, 0, -262130, 23, 0, -131087, 23, 0, -131086, 16, 0, -131085, 17, 0, -131084, 17, 0, -131083, 17, 0, -131082, 17, 0, -131081, 16, 0, -131080, 16, 0, -131079, 4, 0, -131078, 8, 0, -131077, 16, 0, -131076, 23, 0, -131075, 23, 0, -131074, 16, 0, -131073, 1, 0, -196608, 16, 0, -196607, 16, 0, -196606, 23, 0, -196605, 23, 0, -196604, 16, 0, -196603, 16, 0, -196602, 15, 0, -196601, 16, 0, -196600, 0, 0, -196599, 13, 0, -196598, 13, 0, -196597, 3, 0, -196596, 16, 0, -196595, 16, 0, -196594, 23, 0, -65551, 23, 0, -65550, 16, 0, -65549, 16, 0, -65548, 23, 0, -65547, 23, 0, -65546, 23, 0, -65545, 17, 0, -65544, 5, 0, -65543, 22, 0, -65542, 21, 0, -65541, 6, 0, -65540, 7, 0, -65539, 16, 0, -65538, 16, 0, -65537, 17, 0, -131072, 17, 0, -131071, 16, 0, -131070, 16, 0, -131069, 16, 0, -131068, 16, 0, -131067, 16, 0, -131066, 16, 0, -131065, 16, 0, -131064, 16, 0, -131063, 16, 0, -131062, 16, 0, -131061, 16, 0, -131060, 15, 0, -131059, 16, 0, -131058, 23, 0, -15, 23, 0, -14, 16, 0, -13, 16, 0, -12, 16, 0, -11, 16, 0, -10, 23, 0, -9, 23, 0, -8, 11, 0, -7, 20, 0, -6, 12, 0, -5, 12, 0, -4, 8, 0, -3, 16, 0, -2, 16, 0, -1, 23, 0, -65536, 23, 0, -65535, 16, 0, -65534, 5, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 7, 0, -65527, 17, 0, -65526, 17, 0, -65525, 16, 0, -65524, 16, 0, -65523, 16, 0, -65522, 23, 0, 65521, 23, 0, 65522, 16, 0, 65523, 16, 0, 65524, 16, 0, 65525, 16, 0, 65526, 16, 0, 65527, 16, 0, 65528, 16, 0, 65529, 11, 0, 65530, 20, 0, 65531, 24, 0, 65532, 9, 0, 65533, 16, 0, 65534, 16, 0, 65535, 23, 0, 0, 23, 0, 1, 16, 0, 2, 11, 0, 3, 10, 0, 4, 20, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 8, 8, 0, 9, 16, 0, 10, 23, 0, 11, 17, 0, 12, 16, 0, 13, 16, 0, 14, 23, 0, 131057, 23, 0, 131058, 16, 0, 131059, 0, 0, 131060, 13, 0, 131061, 13, 0, 131062, 13, 0, 131063, 3, 0, 131064, 16, 0, 131065, 16, 0, 131066, 11, 0, 131067, 9, 0, 131068, 17, 0, 131069, 17, 0, 131070, 16, 0, 131071, 16, 0, 65536, 16, 0, 65537, 16, 0, 65538, 17, 0, 65539, 17, 0, 65540, 4, 0, 65541, 24, 0, 65542, 10, 0, 65543, 20, 0, 65544, 21, 0, 65545, 7, 0, 65546, 16, 0, 65547, 16, 0, 65548, 16, 0, 65549, 16, 0, 65550, 23, 0, 196593, 23, 0, 196594, 16, 0, 196595, 16, 0, 196596, 16, 0, 196597, 16, 0, 196598, 16, 0, 196599, 16, 0, 196600, 16, 0, 196601, 16, 0, 196602, 16, 0, 196603, 16, 0, 196604, 23, 0, 196605, 23, 0, 196606, 16, 0, 196607, 16, 0, 131072, 16, 0, 131073, 16, 0, 131074, 23, 0, 131075, 23, 0, 131076, 11, 0, 131077, 9, 0, 131078, 16, 0, 131079, 11, 0, 131080, 10, 0, 131081, 9, 0, 131082, 16, 0, 131083, 2, 0, 131084, 15, 0, 131085, 16, 0, 131086, 23, 0, 262129, 23, 0, 262130, 17, 0, 262131, 17, 0, 262132, 17, 0, 262133, 16, 0, 262134, 15, 0, 262135, 16, 0, 262136, 16, 0, 262137, 17, 0, 262138, 17, 0, 262139, 17, 0, 262140, 23, 0, 262141, 23, 0, 262142, 16, 0, 262143, 16, 0, 196608, 16, 0, 196609, 16, 0, 196610, 23, 0, 196611, 23, 0, 196612, 17, 0, 196613, 17, 0, 196614, 17, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 16, 0, 196619, 1, 0, 196620, 16, 0, 196621, 16, 0, 196622, 23, 0, 327665, 23, 0, 327666, 23, 0, 327667, 23, 0, 327668, 23, 0, 327669, 17, 0, 327670, 17, 0, 327671, 17, 0, 327672, 17, 0, 327673, 23, 0, 327674, 15, 0, 327675, 23, 0, 327676, 23, 0, 327677, 23, 0, 327678, 17, 0, 327679, 17, 0, 262144, 17, 0, 262145, 17, 0, 262146, 23, 0, 262147, 23, 0, 262148, 23, 0, 262149, 23, 0, 262150, 23, 0, 262151, 17, 0, 262152, 17, 0, 262153, 17, 0, 262154, 17, 0, 262155, 17, 0, 262156, 17, 0, 262157, 17, 0, 262158, 23, 0, 393201, 23, 0, 393202, 23, 0, 393203, 23, 0, 393204, 23, 0, 393205, 23, 0, 393206, 23, 0, 393207, 23, 0, 393208, 23, 0, 393209, 23, 0, 393210, 17, 0, 393211, 23, 0, 393212, 23, 0, 393213, 15, 0, 393214, 23, 0, 393215, 23, 0, 327680, 23, 0, 327681, 23, 0, 327682, 23, 0, 327683, 23, 0, 327684, 15, 0, 327685, 23, 0, 327686, 15, 0, 327687, 23, 0, 327688, 23, 0, 327689, 23, 0, 327690, 23, 0, 327691, 23, 0, 327692, 23, 0, 327693, 23, 0, 327694, 23, 0, 458737, 23, 0, 458738, 23, 0, 458739, 23, 0, 458740, 23, 0, 458741, 23, 0, 458742, 23, 0, 458743, 23, 0, 458744, 23, 0, 458745, 23, 0, 458746, 15, 0, 458747, 23, 0, 458748, 23, 0, 458749, 17, 0, 458750, 23, 0, 458751, 23, 0, 393216, 23, 0, 393217, 23, 0, 393218, 23, 0, 393219, 23, 0, 393220, 17, 0, 393221, 23, 0, 393222, 17, 0, 393223, 23, 0, 393224, 23, 0, 393225, 23, 0, 393226, 23, 0, 393227, 23, 0, 393228, 23, 0, 393229, 23, 0, 393230, 23, 0, 524273, 23, 0, 524274, 23, 0, 524275, 23, 0, 524276, 23, 0, 524277, 23, 0, 524278, 23, 0, 524279, 23, 0, 524280, 23, 0, 524281, 23, 0, 524282, 17, 0, 524283, 23, 0, 524284, 23, 0, 524285, 23, 0, 524286, 23, 0, 524287, 23, 0, 458752, 23, 0, 458753, 23, 0, 458754, 23, 0, 458755, 23, 0, 458756, 23, 0, 458757, 23, 0, 458758, 23, 0, 458759, 23, 0, 458760, 23, 0, 458761, 23, 0, 458762, 23, 0, 458763, 23, 0, 458764, 23, 0, 458765, 23, 0, 458766, 23, 0, 589809, 23, 0, 589810, 23, 0, 589811, 23, 0, 589812, 23, 0, 589813, 23, 0, 589814, 23, 0, 589815, 23, 0, 589816, 23, 0, 589817, 23, 0, 589818, 23, 0, 589819, 23, 0, 589820, 23, 0, 589821, 23, 0, 589822, 23, 0, 589823, 23, 0, 524288, 23, 0, 524289, 23, 0, 524290, 23, 0, 524291, 23, 0, 524292, 23, 0, 524293, 23, 0, 524294, 23, 0, 524295, 23, 0, 524296, 23, 0, 524297, 23, 0, 524298, 23, 0, 524299, 23, 0, 524300, 23, 0, 524301, 23, 0, 524302, 23, 0 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 3
texture = ExtResource( 5 )
centered = false
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )

[node name="SpawnPoint1" type="Node2D" parent="."]
position = Vector2( -24, -8 )

[node name="SpawnPoint2" type="Node2D" parent="."]
position = Vector2( 24, -8 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LabelNode" type="Node2D" parent="."]
z_index = 4

[node name="CountdownLabel" type="Label" parent="LabelNode"]
visible = false
margin_left = -239.0
margin_top = -135.0
margin_right = 239.0
margin_bottom = 135.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
align = 1
valign = 1

[node name="GameOverCountdownLabel" type="Label" parent="LabelNode"]
visible = false
margin_left = -230.0
margin_top = -132.0
margin_right = 239.0
margin_bottom = 135.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )

[node name="GameOverNode" type="Node2D" parent="LabelNode"]

[node name="GameOverLabel" type="Label" parent="LabelNode/GameOverNode"]
margin_left = -239.0
margin_top = -139.0
margin_right = 239.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "
"
align = 1
valign = 1

[connection signal="playersHaveBeenCreated" from="." to="Sprite" method="_on_MainNode_playersHaveBeenCreated"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
